Edits from review; other visual tweaks

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7733,9 +7733,7 @@ a.category-slug.active {
   tags:
     - cfgov-misc
 */
-.list__unstyled,
-.list__icons,
-.list__links {
+.list__unstyled {
   padding-left: 0;
   list-style-type: none;
 }
@@ -7837,22 +7835,29 @@ a.category-slug.active {
       markup: |
         <ul class="list list__icons">
             <li class="list_item">
-                <span class="cf-icon cf-icon-email"></span>
+                <span class="cf-icon cf-icon-email list_icon"></span>
                 List item 1
             </li>
             <li class="list_item">
-                <span class="cf-icon cf-icon-phone"></span>
+                <span class="cf-icon cf-icon-phone list_icon"></span>
                 List item 1
             </li>
             <li class="list_item">
-                <span class="cf-icon cf-icon-fax"></span>
+                <span class="cf-icon cf-icon-fax list_icon"></span>
                 List item 1
             </li>
         </ul>
   tags:
     - cfgov-misc
 */
-.list__icons > .list_item .cf-icon {
+.list__icons {
+  padding-left: 0;
+  list-style-type: none;
+}
+.list__icons .list_item {
+  margin-left: 0;
+}
+.list__icons .list_icon {
   width: 1.5em;
   text-align: center;
 }
@@ -7882,19 +7887,19 @@ a.category-slug.active {
         <ul class="list list__links list__icons">
             <li class="list_item">
                 <a class="list_link">
-                    <span class="cf-icon cf-icon-email"></span>
+                    <span class="cf-icon cf-icon-email list_icon"></span>
                     List item 1
                 </a>
             </li>
             <li class="list_item">
                 <a class="list_link">
-                    <span class="cf-icon cf-icon-phone"></span>
+                    <span class="cf-icon cf-icon-phone list_icon"></span>
                     List item 2
                 </a>
             </li>
             <li class="list_item">
                 <a class="list_link">
-                    <span class="cf-icon cf-icon-fax"></span>
+                    <span class="cf-icon cf-icon-fax list_icon"></span>
                     List item 3
                 </a>
             </li>
@@ -7902,28 +7907,35 @@ a.category-slug.active {
   tags:
     - cfgov-misc
 */
-.list__links > .list_item {
-  margin-bottom: 0.5em;
+.list__links {
+  padding-left: 0;
+  list-style-type: none;
+}
+.list__links .list_item {
+  margin-left: 0;
+}
+.list__links .list_item {
+  margin-bottom: 0.625em;
 }
 @media only all and (max-width: 47.9375em) {
   .list__links {
     border-top: 1px dotted #0072ce;
   }
-  .list__links > .list_item {
+  .list__links .list_item {
     margin-bottom: 0;
   }
-  .list__links > .list_item > a {
+  .list__links .list_link {
     display: block;
-    padding: 0.5em 0;
+    padding: 0.625em 0;
   }
 }
 @media only all and (min-width: 48em) {
-  .list__links.list__icons > .list_item > a {
-    margin-bottom: 1em;
+  .list__links.list__icons .list_link {
+    margin-bottom: 0.9375em;
     margin-left: 1.5em;
     position: relative;
   }
-  .list__links.list__icons > .list_item > a > [class^='cf-icon'] {
+  .list__links.list__icons .list_icon {
     position: absolute;
     top: 0.0625em;
     left: -1.625em;
@@ -9811,15 +9823,42 @@ a.focus .summary_header {
    cfgov-refresh
    Press resources (Newsroom)
    ========================================================================== */
-.press-section {
-  padding-top: 2em;
+.press-section + .press-section {
+  padding-top: 1.875em;
   border-top: 1px solid #e3e4e5;
-  margin-top: 2em;
+  margin-top: 2.8125em;
 }
-.press-section:first-child {
-  padding-top: 0;
-  border-top: none;
+.press-section_title {
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
   margin-top: 0;
+  margin-bottom: 0.22727273em;
+  font-size: 1.375em;
+  line-height: 1.27272727;
+}
+.press-section_title em,
+.press-section_title i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+.lt-ie9 .press-section_title em,
+.lt-ie9 .press-section_title i {
+  font-style: normal !important;
+}
+.press-section_title strong,
+.press-section_title b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+.lt-ie9 .press-section_title strong,
+.lt-ie9 .press-section_title b {
+  font-weight: normal !important;
+}
+.press-contacts_people {
+  margin-top: 1.75em;
 }
 .contact-person {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
@@ -9846,8 +9885,68 @@ a.focus .summary_header {
 .lt-ie9 .contact-person b {
   font-weight: normal !important;
 }
+.contact-person_name {
+  margin-top: 0;
+  margin-bottom: 0.27777778em;
+  font-size: 1.125em;
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.22222222;
+}
+.lt-ie9 .contact-person_name {
+  font-weight: normal !important;
+}
+.contact-person__director {
+  margin-top: 1.875em;
+}
+.contact-person__director .contact-person_name {
+  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0.22727273em;
+  font-size: 1.375em;
+  line-height: 1.27272727;
+  margin-bottom: 0.9375em;
+}
+.contact-person__director .contact-person_name em,
+.contact-person__director .contact-person_name i {
+  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+  font-style: italic;
+  font-weight: normal;
+}
+.lt-ie9 .contact-person__director .contact-person_name em,
+.lt-ie9 .contact-person__director .contact-person_name i {
+  font-style: normal !important;
+}
+.contact-person__director .contact-person_name strong,
+.contact-person__director .contact-person_name b {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+}
+.lt-ie9 .contact-person__director .contact-person_name strong,
+.lt-ie9 .contact-person__director .contact-person_name b {
+  font-weight: normal !important;
+}
+.contact-person__director .contact-person_title {
+  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0.35714286em;
+  font-size: 0.875em;
+  line-height: 1.57142857;
+}
+.lt-ie9 .contact-person__director .contact-person_title {
+  font-weight: normal !important;
+}
 .jump-link {
-  margin-top: 1.25em;
+  display: block;
+  margin-top: 1.5em;
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -9873,12 +9972,48 @@ a.focus .summary_header {
 .lt-ie9 .jump-link b {
   font-weight: normal !important;
 }
+@media only all and (max-width: 47.9375em) {
+  .jump-link {
+    padding: 0.625em 0;
+    border: dotted #0072ce;
+    border-width: 1px 0;
+  }
+}
 @media only all and (min-width: 48em) {
   .press-section {
     display: block;
     position: relative;
     margin-left: -15px;
     margin-right: -15px;
+  }
+  .press-section_title {
+    font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    margin-top: 0;
+    margin-bottom: 0.30769231em;
+    font-size: 1.625em;
+    line-height: 1.26923077;
+  }
+  .press-section_title em,
+  .press-section_title i {
+    font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
+    font-style: italic;
+    font-weight: normal;
+  }
+  .lt-ie9 .press-section_title em,
+  .lt-ie9 .press-section_title i {
+    font-style: normal !important;
+  }
+  .press-section_title strong,
+  .press-section_title b {
+    font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+  }
+  .lt-ie9 .press-section_title strong,
+  .lt-ie9 .press-section_title b {
+    font-weight: normal !important;
   }
   .press-section_title,
   .press-section_intro,
@@ -10032,6 +10167,7 @@ a.focus .summary_header {
     margin-right: -0.25em;
     vertical-align: top;
     width: 66.66666667%;
+    margin-top: 0;
   }
   .ie .press-contacts_people {
     margin-right: -0.26em;
@@ -10045,7 +10181,7 @@ a.focus .summary_header {
   .contact-person__director {
     text-align: left;
   }
-  .contact-person__director > img {
+  .contact-person__director .contact-person_photo {
     float: left;
     margin-right: 1.875em;
   }
