--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -6572,135 +6572,6 @@ img {
 }
 
 /* topdoc
-  name: Content footer
-  family: cfgov-layout
-  patterns:
-    - name: Standard content footer example
-      markup: |
-        Main content...
-        <aside class="content_footer">
-            Content footer
-        </aside>
-      codenotes:
-        - .content_footer
-      notes:
-        - "Gives some vertical margin between main content and main content
-           footer."
-        - ".content_footer is useful when you have sidebar-like content in a
-           layout without a sidebar. For example when you have a side nav layout
-           you can place sidebar content in the .content_footer area instead."
-    - name: Flush content footer example
-      markup: |
-        <main class="content content__1-3" id="main" role="main">
-            <div class="wrapper content_wrapper">
-                <aside class="content_sidebar">
-                    Section navigation
-                </aside>
-                <section class="content_main">
-                    Main content...
-                    <aside class="content_footer content_footer__bg">
-                        Flush content footer with a background
-                    </aside>
-                </section>
-            </div>
-        </main>
-      codenotes:
-        - .content_footer__bg
-      notes:
-        - "Adds a background color to .content_footer that is flush with its
-           outer container."
-  tags:
-    - cfgov-layout
-*/
-
-.content_footer {
-  margin-top: 3.75em;
-}
-
-.content_footer__bg {
-  padding: 2em 0.9375em;
-  margin-right: -15px;
-  margin-left: -15px;
-  background: #f1f2f2;
-}
-
-.content_footer__bg {
-  padding: 2.8125em 1.875em;
-  margin-right: -30px;
-  margin-left: -30px;
-}
-
-/* topdoc
-  name: Content footer layouts
-  family: cfgov-layout
-  patterns:
-    - name: Standard content footer columns
-      markup: |
-        <aside class="content_footer">
-            <div class="content-footer-l">
-                <div class="content-footer-l_col">
-                    Content footer column
-                </div>
-                <div class="content-footer-l_col">
-                    Content footer column
-                </div>
-            </div>
-        </aside>
-      codenotes:
-        - |
-          Structural cheat sheet:
-          -----------------------
-          .content-footer-l
-            .content-footer-l_col
-      notes:
-        - ".content-footer-l_col's default to 50% width on large screens and
-           stack vertically on smaller screens."
-        - "Since .content-footer_col's are nested within .content_main extra
-           margins will occur. .content-footer-l uses the grid_nested-col-group
-           to counter this."
-  tags:
-    - cfgov-layout
-*/
-
-.content-footer-l {
-  display: block;
-  position: relative;
-  margin-left: -15px;
-  margin-right: -15px;
-}
-
-.content-footer-l_col + .content-footer-l_col {
-  margin-top: 3.75em;
-}
-
-.content-footer-l_col {
-  display: inline-block;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  border: solid transparent;
-  border-width: 0 15px;
-  margin-right: -0.25em;
-  vertical-align: top;
-  width: 50%;
-}
-
-.ie .content-footer-l_col {
-  margin-right: -0.26em;
-}
-
-.lt-ie8 .content-footer-l_col {
-  display: inline;
-  margin-right: 0;
-  zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
-}
-
-.content-footer-l_col + .content-footer-l_col {
-  margin-top: 0;
-}
-
-/* topdoc
   name: Bleedbar sidebar styling
   family: cfgov-layout
   patterns:
@@ -6736,7 +6607,7 @@ img {
 }
 
 .content__bleedbar .content_sidebar {
-  padding: 2em 0.9375em;
+  padding: 1.875em 0.9375em;
   background: #f1f2f2;
 }
 
@@ -6797,6 +6668,331 @@ img {
   padding: 1.5em 0;
   border-top: 3px solid #2cb34a;
   background: #f1f2f2;
+}
+
+/* topdoc
+  name: Content block
+  family: cfgov-layout
+  notes:
+    - ".content_block elements are built to be used within .content_main."
+  patterns:
+    - name: Standard content block example
+      markup: |
+        Main content...
+        <div class="content_block">
+            Content block
+        </div>
+        <div class="content_block">
+            Content block
+        </div>
+        <div class="content_block">
+            Content block
+        </div>
+      codenotes:
+        - .content_block
+      notes:
+        - "Useful for when you need some consistent margin between content
+           blocks within .content_main."
+    - name: Flush-top modifier
+      markup: |
+        Main content...
+        <div class="content_block content_block__flush-top">
+            Content block with no top margin.
+        </div>
+        <div class="content_block">
+            Content block
+        </div>
+      codenotes:
+        - .content_block.content_block__flush-top
+      notes:
+        - "Removes the top margin from .content_block."
+    - name: Flush-bottom modifier
+      markup: |
+        Main content...
+        <div class="content_block content_block__flush-bottom">
+            Content block with no bottom margin.
+        </div>
+        <div class="content_block content_block__flush-top">
+            Content block with no top margin.
+        </div>
+      codenotes:
+        - .content_block.content_block__flush-bottom
+      notes:
+        - "Removes the bottom margin from .content_block."
+    - name: Flush-sides modifier
+      markup: |
+        <main class="content content__1-3" id="main" role="main">
+            <div class="wrapper content_wrapper">
+                <aside class="content_sidebar">
+                    Section navigation
+                </aside>
+                <section class="content_main">
+                    Main content...
+                    <aside class="content_block content_block__flush-sides">
+                        Content block with no side margins.
+                    </aside>
+                </section>
+            </div>
+        </main>
+      codenotes:
+        - .content_block.content_block__flush-sides
+      notes:
+        - "Removes the side margin from .content_block."
+    - name: Background modifier
+      markup: |
+        Main content...
+        <div class="content_block content_block__bg">
+            Content block with a background
+        </div>
+      codenotes:
+        - .content_block.content_block__bg
+      notes:
+        - "Adds a background color and padding to .content_block."
+    - name: Background and flush-sides modifier combo example
+      markup: |
+        <main class="content content__1-3" id="main" role="main">
+            <div class="wrapper content_wrapper">
+                <aside class="content_sidebar">
+                    Section navigation
+                </aside>
+                <section class="content_main content_main__flush-bottom">
+                    Main content...
+                    <div class="content_block content_block__flush-sides content_block__bg">
+                        Content block with a background and flush sides
+                    </div>
+                </section>
+            </div>
+        </main>
+      codenotes:
+        - .content_block.content_block__sides.content_block__bg
+      notes:
+        - "This is an example of combining modifiers to get a flush padded bg
+           with a .content_block."
+  tags:
+    - cfgov-layout
+*/
+
+.content_block {
+  margin: 3.75em 0;
+}
+
+.content_block__flush-top {
+  margin-top: 0 !important;
+}
+
+.content_block__flush-bottom {
+  margin-bottom: 0 !important;
+}
+
+.content_block__flush-sides {
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
+.content_block__flush-sides {
+  margin-right: -30px;
+  margin-left: -30px;
+}
+
+.content_block__bg {
+  padding: 1.875em 0.9375em;
+  background: #f1f2f2;
+}
+
+.content_block__bg {
+  padding: 2.8125em 1.875em;
+}
+
+/* topdoc
+  name: Content layouts
+  family: cfgov-layout
+  patterns:
+    - name: Standard content columns
+      markup: |
+        <div class="content-l">
+            <div class="content-l_col content-l_col-1">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Full-width column (spans 12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-2">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Half-width column (spans 6/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-2">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Half-width column (spans 6/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Third-width column (spans 4/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Third-width column (spans 4/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-1-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;
+                            margin-bottom: 4px;">
+                    Third-width column (spans 4/12 columns)
+                </div>
+            </div>
+            <div class="content-l_col content-l_col-2-3">
+                <div style="background: #F1F2F2;
+                            text-align: center;
+                            padding: 8px;">
+                    Two thirds-width column (spans 8/12 columns)
+                </div>
+            </div>
+        </div>
+      codenotes:
+        - |
+          Structural cheat sheet:
+          -----------------------
+          .content-l
+            .content-l_col.content-l_col-(RATIO)
+        - .content-l_col.content-l_col-1
+        - .content-l_col.content-l_col-1-2
+        - .content-l_col.content-l_col-1-3
+        - .content-l_col.content-l_col-2-3
+      notes:
+        - "These layout classes have breakpoints that are specific for use
+           within .content_main."
+        - "Since .content-l_col's are nested within .content_main extra
+           margins will occur. The .content-l container uses the
+           grid_nested-col-group mixin to counter this."
+        - "Note that the divs with inline styles are for demonstration purposes
+           only and should not be used in production."
+  tags:
+    - cfgov-layout
+*/
+
+.content-l {
+  display: block;
+  position: relative;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.content-l_col + .content-l_col {
+  margin-top: 3.75em;
+}
+
+.content-l_col + .content-l_col {
+  margin-top: 0;
+}
+
+.content-l_col-1 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 100%;
+}
+
+.ie .content-l_col-1 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-1 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col-1-2 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 50%;
+}
+
+.ie .content-l_col-1-2 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-1-2 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col-1-3 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 33.33333333%;
+}
+
+.ie .content-l_col-1-3 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-1-3 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+}
+
+.content-l_col-2-3 {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border: solid transparent;
+  border-width: 0 15px;
+  margin-right: -0.25em;
+  vertical-align: top;
+  width: 66.66666667%;
+}
+
+.ie .content-l_col-2-3 {
+  margin-right: -0.26em;
+}
+
+.lt-ie8 .content-l_col-2-3 {
+  display: inline;
+  margin-right: 0;
+  zoom: 1;
+  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 /* topdoc
