Changes .sans to .short-desc.

--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -234,7 +234,7 @@
                     Press information
                 </span>
             </h1>
-            <p class="sans">
+            <p class="short-desc">
                 If you want to repbulish the article or have questions about the content,
                 please contact the press office.
             </p>
