--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -25,19 +25,19 @@
 
 
 /* topdoc
-  name: Sans
+  name: Short description
   family: cfgov-misc
   patterns:
-    - name: San serif text
+    - name: Simple styling for short descriptions
       markup: |
-        <p class="sans">I am using a  san serif font.</p>
+        <p class="short-desc">I am short description.</p>
       codenotes:
-        - .sans
+        - .short-desc
   tags:
     - cfgov-misc
 */
 
-.sans {
+.short-desc {
     .webfont-regular();
 }
 
