--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7975,6 +7975,9 @@ a.category-slug.active {
     zoom: 1;
     behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
   }
+  a.hero_card {
+    border-color: transparent;
+  }
 }
 @media only all and (min-width: 64em) {
   .hero_card {
