--- a/docs/layout/index.html
+++ b/docs/layout/index.html
@@ -323,14 +323,18 @@ main.content
           <section class="docs-pattern_pattern">
 <main class="content content__1-3" id="main" role="main">
     <div class="wrapper content_wrapper">
-        <aside class="content_sidebar">
-            Section navigation
+        <aside class="content_sidebar content__flush-bottom">
+            Side with no bottom padding...
         </aside>
-        <section class="content_main content_main__flush-bottom">
-            Main content...
-            <aside class="content_footer content_footer__bg">
-                Content footer
-            </aside>
+        <section class="content_main content__flush-bottom">
+            Main content with no bottom padding...
+            <div class="content_block
+                        content_block__flush-bottom
+                        content_block__flush-sides
+                        content_block__bg">
+                .content__flush-bottom is very useful when you have a
+                content block with a background and flush sides.
+            </div>
         </section>
     </div>
 </main>
@@ -338,20 +342,24 @@ main.content
     <div class="wrapper">
         Footer
     </div>
-</footer><!-- END .footer -->
+</footer>
 
           </section>
           <footer class="docs-pattern_footer">
             <pre class="docs-code docs-pattern_markup"><code data-language="html">&lt;main class=&quot;content content__1-3&quot; id=&quot;main&quot; role=&quot;main&quot;&gt;
     &lt;div class=&quot;wrapper content_wrapper&quot;&gt;
-        &lt;aside class=&quot;content_sidebar&quot;&gt;
-            Section navigation
+        &lt;aside class=&quot;content_sidebar content__flush-bottom&quot;&gt;
+            Side with no bottom padding...
         &lt;/aside&gt;
-        &lt;section class=&quot;content_main content_main__flush-bottom&quot;&gt;
-            Main content...
-            &lt;aside class=&quot;content_footer content_footer__bg&quot;&gt;
-                Content footer
-            &lt;/aside&gt;
+        &lt;section class=&quot;content_main content__flush-bottom&quot;&gt;
+            Main content with no bottom padding...
+            &lt;div class=&quot;content_block
+                        content_block__flush-bottom
+                        content_block__flush-sides
+                        content_block__bg&quot;&gt;
+                .content__flush-bottom is very useful when you have a
+                content block with a background and flush sides.
+            &lt;/div&gt;
         &lt;/section&gt;
     &lt;/div&gt;
 &lt;/main&gt;
@@ -359,7 +367,7 @@ main.content
     &lt;div class=&quot;wrapper&quot;&gt;
         Footer
     &lt;/div&gt;
-&lt;/footer&gt;&lt;!-- END .footer --&gt;</code></pre>
+&lt;/footer&gt;</code></pre>
             <ul class="docs-codenotes">
               <li>
                 <pre class="docs-code"><code>.content_main__flush-bottom</code></pre>
@@ -408,8 +416,7 @@ main.content
     padding: 3.75em 0;
   }
 }
-.content_main__flush-bottom,
-.content_sidebar__flush-bottom {
+.content__flush-bottom {
   padding-bottom: 0;
 }
 @media only all and (min-width: 50.0625em) {
