--- a/static/css/layout.less
+++ b/static/css/layout.less
@@ -203,14 +203,19 @@
       markup: |
         <main class="content content__1-3" id="main" role="main">
             <div class="wrapper content_wrapper">
-                <aside class="content_sidebar">
-                    Section navigation
+                <aside class="content_sidebar content__flush-bottom">
+                    Side with no bottom padding...
                 </aside>
-                <section class="content_main content_main__flush-bottom">
-                    Main content...
-                    <aside class="content_footer content_footer__bg">
-                        Content footer
-                    </aside>
+                <section class="content_main content__flush-bottom">
+                    Main content with no bottom padding...
+                    <div class="content_block
+                                content_block__flush-bottom
+                                content_block__flush-sides
+                                content_block__bg">
+                        .content__flush-bottom is very useful when you have a
+                        content block inside of .content_main with a background
+                        and flush sides.
+                    </div>
                 </section>
             </div>
         </main>
@@ -218,7 +223,7 @@
             <div class="wrapper">
                 Footer
             </div>
-        </footer><!-- END .footer -->
+        </footer>
       codenotes:
         - .content_main__flush-bottom
       notes:
@@ -244,11 +249,12 @@
         padding: unit((@grid_gutter-width * 2) / @base-font-size-px, em)
                  0;
     });
-
-    &__flush-bottom {
-        padding-bottom: 0;
-    }
 }
+
+.content__flush-bottom {
+    padding-bottom: 0;
+}
+
 
 // Set up standard multi-column content area layouts
 .u-respond-to-min(801px, {
