--- a/docs/layout/main.ie.html
+++ b/docs/layout/main.ie.html
@@ -337,7 +337,8 @@ main.content
                         content_block__flush-sides
                         content_block__bg">
                 .content__flush-bottom is very useful when you have a
-                content block with a background and flush sides.
+                content block inside of .content_main with a background
+                and flush sides.
             </div>
         </section>
     </div>
@@ -362,7 +363,8 @@ main.content
                         content_block__flush-sides
                         content_block__bg&quot;&gt;
                 .content__flush-bottom is very useful when you have a
-                content block with a background and flush sides.
+                content block inside of .content_main with a background
+                and flush sides.
             &lt;/div&gt;
         &lt;/section&gt;
     &lt;/div&gt;
