--- a/static/css/misc.less
+++ b/static/css/misc.less
@@ -1065,7 +1065,7 @@ select[multiple].success {
   family: cfgov-misc
   notes:
     - "Note that modifiers are the most common use cases for this block, hence
-      the reason there are no direct styles associated with .link or .link_item."
+      the reason there are no direct styles associated with .list or .list_item."
   patterns:
     - name: Basic structure
       markup: |
