Fixes press resources stay informed stuff.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -54,8 +54,8 @@
     specific to a single page or section of the site, all new styles should be added to src/static/css/main.less.
 -->
 
-<!--[if lt IE 9]>      <link rel="stylesheet" href="../static/css/main.ie.min.css"> <![endif]-->
-<!--[if gt IE 8]><!--> <link rel="stylesheet" href="../static/css/main.min.css"> <!--<![endif]-->
+<!--[if lt IE 9]>      <link rel="stylesheet" href="/static/css/main.ie.min.css"> <![endif]-->
+<!--[if gt IE 8]><!--> <link rel="stylesheet" href="/static/css/main.min.css"> <!--<![endif]-->
 
 <!--
     ============
@@ -68,7 +68,7 @@
 -->
 
 <!--[if lt IE 9]>
-    <script src="../static/vendor/html5shiv/html5shiv-printshiv.min.js"></script>
+    <script src="/static/vendor/html5shiv/html5shiv-printshiv.min.js"></script>
 <![endif]-->
 
     <script>
@@ -115,7 +115,7 @@
 
     <div class="demo-banner">
         cfgov-refresh demo: <b>{% block demo_title %}MISSING DEMO TITLE{% endblock demo_title %}</b>
-        <a class="demo-banner_back-link" href="../index.html">
+        <a class="demo-banner_back-link" href="/index.html">
             <span class="cf-icon cf-icon-left"></span> Back to demo home
         </a>
     </div>
@@ -140,7 +140,7 @@
     specific to a single page or section of the site, all custom JS should be added to src/static/js/app.js.
 -->
 
-<script src="../static/js/main.min.js"></script>
+<script src="/static/js/main.min.js"></script>
 
 </body>
 
