Fixes nav colors after cf-typography update.

--- a/static/css/utilities.less
+++ b/static/css/utilities.less
@@ -347,29 +347,29 @@
 .u-link__colors-base(@c:@pacific, @v:@teal, @h:@pacific-50, @f:@pacific, @a:@navy,
                      @bc:@pacific, @bv:@teal, @bh:@pacific-50, @bf:@pacific, @ba:@navy) {
     color: @c;
-    border-bottom-color: @bc;
+    border-color: @bc;
 
     &:visited,
     &.visited {
-        border-bottom-color: @bv;
+        border-color: @bv;
         color: @v;
     }
 
     &:hover,
     &.hover {
-        border-bottom-color: @bh;
+        border-color: @bh;
         color: @h;
     }
 
     &:focus,
     &.focus {
-        border-bottom-color: @bf;
+        border-color: @bf;
         color: @f;
     }
 
     &:active,
     &.active {
-        border-bottom-color: @ba;
+        border-color: @ba;
         color: @a;
     }
 }
