Changes secondary nav font to medium.

--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7063,40 +7063,20 @@ img {
 }
 
 .nav-secondary_link {
-  font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
   display: inline-block;
   padding: 0.55555556em;
   border-left-style: solid;
   border-left-width: 4px;
+  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
   font-size: 1.125em;
   line-height: 1;
   color: #0072ce;
   border-color: transparent;
 }
 
-.nav-secondary_link em,
-.nav-secondary_link i {
-  font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
-  font-style: italic;
-  font-weight: normal;
-}
-
-.lt-ie9 .nav-secondary_link em,
-.lt-ie9 .nav-secondary_link i {
-  font-style: normal !important;
-}
-
-.nav-secondary_link strong,
-.nav-secondary_link b {
-  font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
-  font-style: normal;
-  font-weight: bold;
-}
-
-.lt-ie9 .nav-secondary_link strong,
-.lt-ie9 .nav-secondary_link b {
+.lt-ie9 .nav-secondary_link {
   font-weight: normal !important;
 }
 
