--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6219,11 +6219,14 @@ img {
 .nav-secondary_item {
   list-style: none;
 }
+.nav-secondary_item + .nav-secondary_item {
+  margin-top: 1px;
+}
 .nav-secondary_link {
   display: inline-block;
   padding: 0.55555556em;
   border-left-style: solid;
-  border-left-width: 4px;
+  border-left-width: 5px;
   font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
