--- a/static/css/nav-secondary.less
+++ b/static/css/nav-secondary.less
@@ -53,13 +53,17 @@
 
     &_item {
         list-style: none;
+
+        & + & {
+            margin-top: 1px;
+        }
     }
 
     &_link {
         display: inline-block;
         padding: unit(10px / 18px, em);
         border-left-style: solid;
-        border-left-width: 4px;
+        border-left-width: 5px;
         .webfont-medium();
         font-size: unit(18px / @base-font-size-px, em);
         line-height: 1;
