--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6177,23 +6177,38 @@ img {
     - name: Default example
       markup: |
         <nav class="nav-secondary">
-            <ul class="nav-secondary_list">
-                <li class="nav-secondary_item">
-                    <a class="nav-secondary_link nav-secondary_link__current" href="#">
-                       Item 1
-                   </a>
-                </li>
-                <li class="nav-secondary_item">
-                    <a class="nav-secondary_link" href="#">
-                       Item 2
-                   </a>
-                </li>
-                <li class="nav-secondary_item">
-                    <a class="nav-secondary_link" href="#">
-                       Item 3
-                   </a>
-                </li>
-            </ul>
+            <div class="expandable">
+                <div class="expandable_header">
+                    <button class="expandable_target nav-secondary_link nav-secondary_link__current">
+                        Item 1
+                        <span class="expandable_cue-open">
+                            <span class="btn-icon-right cf-icon cf-icon-down"></span>
+                        </span>
+                        <span class="expandable_cue-close">
+                            <span class="btn-icon-right cf-icon cf-icon-up"></span>
+                        </span>
+                    </button>
+                </div>
+                <div class="expandable_content">
+                    <ul class="nav-secondary_list">
+                        <li class="nav-secondary_item">
+                            <a class="nav-secondary_link nav-secondary_link__current" href="#">
+                               Item 1
+                            </a>
+                        </li>
+                        <li class="nav-secondary_item">
+                            <a class="nav-secondary_link" href="#">
+                               Item 2
+                            </a>
+                        </li>
+                        <li class="nav-secondary_item">
+                            <a class="nav-secondary_link" href="#">
+                               Item 3
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
       codenotes:
         - |
@@ -6219,86 +6234,146 @@ img {
 .nav-secondary_item {
   list-style: none;
 }
-.nav-secondary_item + .nav-secondary_item {
-  margin-top: 1px;
+@media only all and (min-width: 50em) {
+  .nav-secondary_item + .nav-secondary_item {
+    margin-top: 1px;
+  }
 }
-.nav-secondary_link {
-  display: inline-block;
-  padding: 0.55555556em;
-  border-left-style: solid;
-  border-left-width: 5px;
-  font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 1.125em;
-  line-height: 1;
-  color: #0072ce;
-  border-color: transparent;
+@media only all and (max-width: 49.9375em) {
+  .nav-secondary_link {
+    display: block;
+    padding: 0.9375em;
+    border-bottom-style: solid;
+    border-width: 0;
+    border-bottom-width: 1px;
+    background: #f1f2f2;
+    font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1em;
+    color: #43484e;
+    border-color: #e3e4e5;
+    text-align: left;
+  }
+  .lt-ie9 .nav-secondary_link {
+    font-weight: normal !important;
+  }
+  .nav-secondary_link:visited,
+  .nav-secondary_link.visited {
+    border-color: #e3e4e5;
+    color: #43484e;
+  }
+  .nav-secondary_link:hover,
+  .nav-secondary_link.hover {
+    border-color: #e3e4e5;
+    color: #43484e;
+  }
+  .nav-secondary_link:focus,
+  .nav-secondary_link.focus {
+    border-color: #e3e4e5;
+    color: #43484e;
+  }
+  .nav-secondary_link:active,
+  .nav-secondary_link.active {
+    border-color: #e3e4e5;
+    color: #43484e;
+  }
 }
-.lt-ie9 .nav-secondary_link {
-  font-weight: normal !important;
+@media only all and (min-width: 50em) {
+  .nav-secondary_link {
+    display: inline-block;
+    padding: 0.55555556em;
+    border-left-style: solid;
+    border-left-width: 5px;
+    font-family: "AvenirNextLTW01-Medium", Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 1.125em;
+    line-height: 1;
+    color: #0072ce;
+    border-color: transparent;
+  }
+  .lt-ie9 .nav-secondary_link {
+    font-weight: normal !important;
+  }
+  .nav-secondary_link:visited,
+  .nav-secondary_link.visited {
+    border-color: transparent;
+    color: #0072ce;
+  }
+  .nav-secondary_link:hover,
+  .nav-secondary_link.hover {
+    border-color: transparent;
+    color: #101820;
+  }
+  .nav-secondary_link:focus,
+  .nav-secondary_link.focus {
+    border-color: transparent;
+    color: #101820;
+  }
+  .nav-secondary_link:active,
+  .nav-secondary_link.active {
+    border-color: transparent;
+    color: #101820;
+  }
 }
-.nav-secondary_link:visited,
-.nav-secondary_link.visited {
-  border-color: transparent;
-  color: #0072ce;
+@media only all and (max-width: 49.9375em) {
+  .nav-secondary_link__current {
+    font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  .lt-ie9 .nav-secondary_link__current {
+    font-weight: normal !important;
+  }
+  .nav-secondary_item .nav-secondary_link__current {
+    display: none;
+  }
 }
-.nav-secondary_link:hover,
-.nav-secondary_link.hover {
-  border-color: transparent;
-  color: #101820;
-}
-.nav-secondary_link:focus,
-.nav-secondary_link.focus {
-  border-color: transparent;
-  color: #101820;
-}
-.nav-secondary_link:active,
-.nav-secondary_link.active {
-  border-color: transparent;
-  color: #101820;
-}
-.nav-secondary_link:hover,
-.nav-secondary_link:focus,
-.nav-secondary_link__current {
-  color: #101820;
-  border-color: #2cb34a;
-}
-.nav-secondary_link:hover:visited,
-.nav-secondary_link:focus:visited,
-.nav-secondary_link__current:visited,
-.nav-secondary_link:hover.visited,
-.nav-secondary_link:focus.visited,
-.nav-secondary_link__current.visited {
-  border-color: #2cb34a;
-  color: #101820;
-}
-.nav-secondary_link:hover:hover,
-.nav-secondary_link:focus:hover,
-.nav-secondary_link__current:hover,
-.nav-secondary_link:hover.hover,
-.nav-secondary_link:focus.hover,
-.nav-secondary_link__current.hover {
-  border-color: #2cb34a;
-  color: #101820;
-}
-.nav-secondary_link:hover:focus,
-.nav-secondary_link:focus:focus,
-.nav-secondary_link__current:focus,
-.nav-secondary_link:hover.focus,
-.nav-secondary_link:focus.focus,
-.nav-secondary_link__current.focus {
-  border-color: #2cb34a;
-  color: #101820;
-}
-.nav-secondary_link:hover:active,
-.nav-secondary_link:focus:active,
-.nav-secondary_link__current:active,
-.nav-secondary_link:hover.active,
-.nav-secondary_link:focus.active,
-.nav-secondary_link__current.active {
-  border-color: #2cb34a;
-  color: #101820;
+@media only all and (min-width: 50em) {
+  .nav-secondary_link:hover,
+  .nav-secondary_link:focus,
+  .nav-secondary_link__current {
+    color: #101820;
+    border-color: #2cb34a;
+  }
+  .nav-secondary_link:hover:visited,
+  .nav-secondary_link:focus:visited,
+  .nav-secondary_link__current:visited,
+  .nav-secondary_link:hover.visited,
+  .nav-secondary_link:focus.visited,
+  .nav-secondary_link__current.visited {
+    border-color: #2cb34a;
+    color: #101820;
+  }
+  .nav-secondary_link:hover:hover,
+  .nav-secondary_link:focus:hover,
+  .nav-secondary_link__current:hover,
+  .nav-secondary_link:hover.hover,
+  .nav-secondary_link:focus.hover,
+  .nav-secondary_link__current.hover {
+    border-color: #2cb34a;
+    color: #101820;
+  }
+  .nav-secondary_link:hover:focus,
+  .nav-secondary_link:focus:focus,
+  .nav-secondary_link__current:focus,
+  .nav-secondary_link:hover.focus,
+  .nav-secondary_link:focus.focus,
+  .nav-secondary_link__current.focus {
+    border-color: #2cb34a;
+    color: #101820;
+  }
+  .nav-secondary_link:hover:active,
+  .nav-secondary_link:focus:active,
+  .nav-secondary_link__current:active,
+  .nav-secondary_link:hover.active,
+  .nav-secondary_link:focus.active,
+  .nav-secondary_link__current.active {
+    border-color: #2cb34a;
+    color: #101820;
+  }
 }
 /* topdoc
     name: EOF
