--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -7016,23 +7016,38 @@ img {
     - name: Default example
       markup: |
         <nav class="nav-secondary">
-            <ul class="nav-secondary_list">
-                <li class="nav-secondary_item">
-                    <a class="nav-secondary_link nav-secondary_link__current" href="#">
-                       Item 1
-                   </a>
-                </li>
-                <li class="nav-secondary_item">
-                    <a class="nav-secondary_link" href="#">
-                       Item 2
-                   </a>
-                </li>
-                <li class="nav-secondary_item">
-                    <a class="nav-secondary_link" href="#">
-                       Item 3
-                   </a>
-                </li>
-            </ul>
+            <div class="expandable">
+                <div class="expandable_header">
+                    <button class="expandable_target nav-secondary_link nav-secondary_link__current">
+                        Item 1
+                        <span class="expandable_cue-open">
+                            <span class="btn-icon-right cf-icon cf-icon-down"></span>
+                        </span>
+                        <span class="expandable_cue-close">
+                            <span class="btn-icon-right cf-icon cf-icon-up"></span>
+                        </span>
+                    </button>
+                </div>
+                <div class="expandable_content">
+                    <ul class="nav-secondary_list">
+                        <li class="nav-secondary_item">
+                            <a class="nav-secondary_link nav-secondary_link__current" href="#">
+                               Item 1
+                            </a>
+                        </li>
+                        <li class="nav-secondary_item">
+                            <a class="nav-secondary_link" href="#">
+                               Item 2
+                            </a>
+                        </li>
+                        <li class="nav-secondary_item">
+                            <a class="nav-secondary_link" href="#">
+                               Item 3
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
       codenotes:
         - |
