--- a/static/css/nav-secondary.less
+++ b/static/css/nav-secondary.less
@@ -10,23 +10,38 @@
     - name: Default example
       markup: |
         <nav class="nav-secondary">
-            <ul class="nav-secondary_list">
-                <li class="nav-secondary_item">
-                    <a class="nav-secondary_link nav-secondary_link__current" href="#">
-                       Item 1
-                   </a>
-                </li>
-                <li class="nav-secondary_item">
-                    <a class="nav-secondary_link" href="#">
-                       Item 2
-                   </a>
-                </li>
-                <li class="nav-secondary_item">
-                    <a class="nav-secondary_link" href="#">
-                       Item 3
-                   </a>
-                </li>
-            </ul>
+            <div class="expandable">
+                <div class="expandable_header">
+                    <button class="expandable_target nav-secondary_link nav-secondary_link__current">
+                        Item 1
+                        <span class="expandable_cue-open">
+                            <span class="btn-icon-right cf-icon cf-icon-down"></span>
+                        </span>
+                        <span class="expandable_cue-close">
+                            <span class="btn-icon-right cf-icon cf-icon-up"></span>
+                        </span>
+                    </button>
+                </div>
+                <div class="expandable_content">
+                    <ul class="nav-secondary_list">
+                        <li class="nav-secondary_item">
+                            <a class="nav-secondary_link nav-secondary_link__current" href="#">
+                               Item 1
+                            </a>
+                        </li>
+                        <li class="nav-secondary_item">
+                            <a class="nav-secondary_link" href="#">
+                               Item 2
+                            </a>
+                        </li>
+                        <li class="nav-secondary_item">
+                            <a class="nav-secondary_link" href="#">
+                               Item 3
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
       codenotes:
         - |
@@ -54,28 +69,59 @@
     &_item {
         list-style: none;
 
-        & + & {
-            margin-top: 1px;
-        }
+        .u-respond-to-min(800px, {
+            & + & {
+                margin-top: 1px;
+            }
+        });
     }
 
     &_link {
-        display: inline-block;
-        padding: unit(10px / 18px, em);
-        border-left-style: solid;
-        border-left-width: 5px;
-        .webfont-medium();
-        font-size: unit(18px / @base-font-size-px, em);
-        line-height: 1;
-        .u-link__colors(@pacific, @pacific, @black, @black, @black,
-                        transparent, transparent, transparent, transparent, transparent);
+        .u-respond-to-max(799px, {
+            display: block;
+            // width: 100%; // Needed to override button styles
+            padding: unit(15px / 16px, em);
+            border-bottom-style: solid;
+            border-width: 0; // Needed to override button styles
+            border-bottom-width: 1px;
+            background: @gray-10;
+            .webfont-medium();
+            font-size: unit(16px / @base-font-size-px, em);
+            .u-link__colors(@darkgray, @darkgray, @darkgray, @darkgray, @darkgray,
+                            @gray-20, @gray-20, @gray-20, @gray-20, @gray-20);
+            text-align: left; // Needed to override button styles
+        });
+        .u-respond-to-min(800px, {
+            display: inline-block;
+            padding: unit(10px / 18px, em);
+            border-left-style: solid;
+            border-left-width: 5px;
+            .webfont-medium();
+            font-size: unit(18px / @base-font-size-px, em);
+            line-height: 1;
+            .u-link__colors(@pacific, @pacific, @black, @black, @black,
+                            transparent, transparent, transparent, transparent, transparent);
+        });
+    }
+
+    &_link__current {
+        .u-respond-to-max(799px, {
+            .webfont-demi();
+            text-transform: uppercase;
+
+            .nav-secondary_item & {
+                display: none;
+            }
+        });
     }
 
     &_link:hover,
     &_link:focus,
     &_link__current {
-        .u-link__colors(@black, @black, @black, @black, @black,
-                        @green, @green, @green, @green, @green);
+        .u-respond-to-min(800px, {
+            .u-link__colors(@black, @black, @black, @black, @black,
+                            @green, @green, @green, @green, @green);
+        });
     }
 }
 
